chore: update package, dependencies & details

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Will K <will@wknight.dev>",
+  "license": "MIT",
   "description": "",
   "dependencies": {
-    "discord.js": "^14.14.1",
-    "dotenv": "^16.4.7"
+    "discord.js": "^14.22.1",
+    "dotenv": "^17.2.3"
   }
 }
