--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "@azure/msal-node": "^3.8.0",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.3"
   }
