fix: updated example .env

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 DISCORD_APP_ID=
 DISCORD_APP_TOKEN=
-PUBLIC_KEY=
 
-VIN=
+DISCORD_NOTIFICATION_WEBHOOK_URL=
 
-MOT_KEY=
-MOT_ID=
-MOT_SECRET=
+VES_API_KEY=
+
+MOT_CLIENT_ID=
+MOT_CLIENT_SECRET=
+MOT_API_KEY=
+MOT_CLIENT_SCOPE_URL=
+MOT_CLIENT_AUTHORITY=
+
+VIN_URL=
