--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "Will K <will@wknight.dev>",
@@ -14,5 +16,8 @@
     "@azure/msal-node": "^3.8.0",
     "discord.js": "^14.23.2",
     "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
