--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@azure/msal-node": "^3.8.0",
+    "date-fns": "^4.1.0",
     "discord.js": "^14.23.2",
     "dotenv": "^17.2.3"
   },
