--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "vesbot",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "commonjs",
-  "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
-  },
-  "keywords": [],
-  "author": "Will K <will@wknight.dev>",
-  "license": "MIT",
-  "description": "",
-  "dependencies": {
-    "@azure/msal-node": "^3.8.0",
-    "date-fns": "^4.1.0",
-    "discord.js": "^14.23.2",
-    "dotenv": "^17.2.3"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.10"
-  }
+	"name": "vesbot",
+	"version": "1.0.0",
+	"main": "index.js",
+	"type": "commonjs",
+	"scripts": {
+		"test": "jest",
+		"test:watch": "jest --watch",
+		"test:coverage": "jest --coverage"
+	},
+	"keywords": [],
+	"author": "Will K <will@wknight.dev>",
+	"license": "MIT",
+	"description": "",
+	"dependencies": {
+		"@azure/msal-node": "^3.8.0",
+		"date-fns": "^4.1.0",
+		"discord.js": "^14.23.2",
+		"dotenv": "^17.2.3"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.6",
+		"jest": "^29.7.0",
+		"nodemon": "^3.1.10"
+	}
 }
