--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup node
-        uses: actions/setupp-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 25
           cache: 'npm'
