--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
 
   test-summary:
     name: Test summary
-    uses: test-summary@action@v2
+    uses: test-summary/action@v2
     with:
       path: |
         coverage/
