--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,10 +52,26 @@ jobs:
 
   test-summary:
     name: Test summary
-    uses: test-summary/action@v2
-    with:
-      path: |
-        coverage/
-        junit.xml
+    runs-on: ubuntu-latest
     needs: test
     if: always()
+
+    steps:
+      - name: Check test results
+        run: |
+          if [ "${{ needs.test.result }}" == "failure" ]; then
+            echo "❌ Tests failed"
+            exit 1
+          elif [ "${{ needs.test.result }}" == "cancelled" ]; then
+            echo "⚠️ Tests were cancelled"
+            exit 1
+          else
+            echo "✅ All tests passed"
+          fi
+
+      - name: Test Summary
+        uses: test-summary@action@v2
+        with:
+          paths: |
+            coverage/
+            junit.xml
