ci: wrong again

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
           fi
 
       - name: Test Summary
-        uses: test-summary@action@v2
+        uses: test-summary/action@v2
         with:
           paths: |
             coverage/
