--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
 		"jest": "^30.2.0",
+		"jest-junit": "^16.0.0",
 		"nodemon": "^3.1.10"
 	}
 }
