--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,13 +23,10 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npx biome ci
+        run: npm lint
 
-      - name: Run tests
-        run: npm test
-
-      - name: Generate coverage
-        run: npm run test:coverage
+      - name: Run tests and generate coverage
+        run: npm run test:ci-coverage
         continue-on-error: true
 
       - name: Upload coverage
@@ -47,7 +44,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: coverage/junit.xml
+          path: ./junit.xml
           retention-days: 30
 
   test-summary:
