--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run lint
 
       - name: Run tests and generate coverage
-        run: npm run test:ci-coverage
+        run: npm run test:coverage-ci
         continue-on-error: true
 
       - name: Upload coverage
