--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
       - name: Setup node
-        uses: actions/setup-node@v6
+        uses: actions/setup-node@v4
         with:
           node-version: 25
           cache: 'npm'
@@ -23,10 +23,14 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npm run lint
+        run: npm lint
 
-      - name: Run tests and generate coverage
-        run: npm run test:coverage-ci
+      - name: Run tests
+        run: npm test:ci
+        continue-on-error: false
+
+      - name: Generate coverage
+        run: npm run test:coverage
         continue-on-error: true
 
       - name: Upload coverage
@@ -44,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-results
-          path: ./junit.xml
+          path: coverage/junit.xml
           retention-days: 30
 
   test-summary:
@@ -69,4 +73,4 @@ jobs:
       - name: Test Summary
         uses: test-summary/action@v2
         with:
-          paths: ./junit.xml
+          paths: junit.xml
