--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm test:ci
+        run: npm run test:ci
         continue-on-error: false
 
       - name: Generate coverage
