--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,6 @@ jobs:
     steps:
       - name: Check test results
         run: |
-          ls
           if [ "${{ needs.test.result }}" == "failure" ]; then
             echo "❌ Tests failed"
             exit 1
@@ -73,4 +72,4 @@ jobs:
       - name: Test Summary
         uses: test-summary/action@v2
         with:
-          paths: junit.xml
+          paths: '**/junit.xml'
