--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jest": "^30.2.0",
     "jest-junit": "^16.0.0",
     "nodemon": "^3.1.10"
+  },
+  "jest-junit": {
+    "outputDirectory": "coverage"
   }
 }
