--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,18 @@ jobs:
         run: npm run test:ci
         continue-on-error: false
 
+      - name: Check test results
+        run: |
+          if [ "${{ needs.test.result }}" == "failure" ]; then
+            echo "❌ Tests failed"
+            exit 1
+          elif [ "${{ needs.test.result }}" == "cancelled" ]; then
+            echo "⚠️ Tests were cancelled"
+            exit 1
+          else
+            echo "✅ All tests passed"
+          fi
+
       - name: Generate coverage
         run: npm run test:coverage
         continue-on-error: true
@@ -42,6 +54,11 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
         continue-on-error: true
 
+      - name: Upload Test Summary
+        uses: test-summary/action@v2
+        with:
+          paths: "coverage/junit.xml"
+
       - name: Archive results
         if: always()
         uses: actions/upload-artifact@v4
@@ -49,27 +66,3 @@ jobs:
           name: test-results
           path: coverage/junit.xml
           retention-days: 30
-
-  test-summary:
-    name: Test summary
-    runs-on: ubuntu-latest
-    needs: test
-    if: always()
-
-    steps:
-      - name: Check test results
-        run: |
-          if [ "${{ needs.test.result }}" == "failure" ]; then
-            echo "❌ Tests failed"
-            exit 1
-          elif [ "${{ needs.test.result }}" == "cancelled" ]; then
-            echo "⚠️ Tests were cancelled"
-            exit 1
-          else
-            echo "✅ All tests passed"
-          fi
-
-      - name: Test Summary
-        uses: test-summary/action@v2
-        with:
-          paths: "coverage/junit.xml"
