--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci --reporters=default --reporters=jest-junit --no-webstorage"
+    "test:ci": "jest --ci --reporters=default --reporters=jest-junit"
   },
   "keywords": [],
   "author": "Will K <will@wknight.dev>",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@azure/msal-node": "^3.8.0",
-    "date-fns": "^4.1.0",
-    "discord.js": "^14.24.0",
-    "dotenv": "^17.2.3"
+    "@azure/msal-node": "^3.8",
+    "date-fns": "^4.1",
+    "discord.js": "^14.24",
+    "dotenv": "^17.2"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.1",
-    "jest": "^30.2.0",
-    "jest-junit": "^16.0.0",
-    "nodemon": "^3.1.10"
+    "@biomejs/biome": "^2",
+    "jest": "^30",
+    "jest-junit": "^16",
+    "nodemon": "^3"
   },
   "jest-junit": {
     "outputDirectory": "coverage"
