--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
   "description": "",
   "dependencies": {
     "@azure/msal-node": "^5.0",
-    "bufferutil": "^4.1.0",
     "date-fns": "^4.1",
     "discord.js": "^14",
-    "dotenv": "^17.2",
-    "zlib-sync": "^0.1.10"
+    "dotenv": "^17.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^2",
