--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "description": "",
   "dependencies": {
     "@azure/msal-node": "^5.0",
+    "bufferutil": "^4",
     "date-fns": "^4.1",
     "discord.js": "^14",
-    "dotenv": "^17.2"
+    "dotenv": "^17",
+    "zlib-sync": "^0.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2",
