feat: auth for gov.uk fuel finder api

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,10 @@ MOT_API_KEY=
 MOT_CLIENT_SCOPE_URL=
 MOT_CLIENT_AUTHORITY=
 
+VIN_AUTH_URL=
 VIN_URL=
+VIN_USERNAME=
+VIN_PASSWORD=
+
+FUEL_SECRET=
+FUEL_CLIENT_ID=
